--- a/views/business/goods-list.html
+++ b/views/business/goods-list.html
@@ -35,6 +35,7 @@
                         <div class="layui-inline">
                             <div class="layui-form">
                                 <select name="type" id="type" lay-filter="typeSelect">
+                                    <option value="">请选择</option>
                                     <option value="1">原材料</option>
                                     <option value="2">成品</option>
                                 </select>
