--- a/views/business/plan-list.html
+++ b/views/business/plan-list.html
@@ -16,33 +16,50 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12">
             <div class="layui-card">
-                <div class="layui-card-header">样品列表</div>
+                <div class="layui-card-header">生产计划</div>
                 <div class="layui-card-body">
+                    <div class="layui-btn-group" style="margin-bottom: 10px;">
+                        <button class="layui-btn" data-type="add">新增</button>
+                    </div>
                     <div class="demoTable" style="margin-bottom: 10px;">
-                        样品名称：
+                        产品名称：
                         <div class="layui-inline">
-                            <input class="layui-input" name="sampleName" id="sampleName" autocomplete="off">
+                            <input class="layui-input" name="productName" id="productName" autocomplete="off">
                         </div>
-                        样品型号：
+                        生产批次：
                         <div class="layui-inline">
-                            <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
+                            <input class="layui-input" name="batchNo" id="batchNo" autocomplete="off">
                         </div>
-                        合作公司：
+                        状态：
                         <div class="layui-inline">
-                            <input class="layui-input" name="company" id="company" autocomplete="off">
+                            <div class="layui-form">
+                                <select name="type" id="status" lay-filter="typeSelect">
+                                    <option value="">请选择</option>
+                                </select>
+                            </div>
                         </div>
                         <button class="layui-btn" data-type="reload">搜索</button>
+                        <!--<button class="layui-btn" data-type="download">下载</button>
+                        <button class="layui-btn" data-type="print">打印</button>-->
                     </div>
 
                     <table class="layui-hide" id="order-table" lay-filter="order-table"></table>
 
 
+                    <script type="text/html" id="statusTpl">
+                        {{#  if(d.status === 0){ }}
+                        <span style="color: #F581B1;">新建</span>
+                        {{#  } else if(d.status === 1) { }}
+                        <span style="color: #F581B1;">生产</span>
+                        {{#  } else if(d.status === 2) { }}
+                        <span style="color: #F581B1;">完成</span>
+                        {{#  } }}
+                    </script>
+
                     <script type="text/html" id="user-table-barDemo">
                         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="plan">创建生产计划</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="plan_detail">查看生产计划</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="go_produce">进入生产</a>
-                        <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
+                        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
                     </script>
 
                 </div>
@@ -64,18 +81,19 @@
             , layer = layui.layer
             , table = layui.table;
 
-
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/sample/findSamplePage?status=3'
+            , url: domain + 'api/plan/findPlanPage'
             , cols: [[
-                {field: 'sample_name', title: '样品名称', width: 180, sort: true}
-                , {field: 'sample_code', title: '样品型号', width: 100}
-                , {field: 'order_num', title: '订单数量', width: 100}
-                , {field: 'product_unit', title: '单位', width: 100}
-                , {field: 'cooperation_company', title: '合作公司', width: 150, sort: true}
-                , {field: 'deliver_date', title: '交付时间', width: 120}
+                {field: 'planName', title: '生产代号', width: 120, sort: true}
+                , {field: 'productName', title: '产品名称', width: 120, sort: true}
+                , {field: 'batchNo', title: '生产批次', width: 110}
+                , {field: 'deptName', title: '部门', width: 80, sort: true}
+                , {field: 'num', title: '产品数量', width: 100}
+                , {field: 'beginDate', title: '开始生产时间', width: 120}
+                , {field: 'endDate', title: '结束生产时间', width: 115}
+                , {field: 'status', title: '状态', width: 80, templet: '#statusTpl', unresize: true}
                 , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo'}
             ]]
             , id: 'orderTable'
@@ -85,65 +103,72 @@
 
         element.render();
 
+
         //监听工具条
         table.on('tool(order-table)', function (obj) {
             var data = obj.data;
             if (obj.event === 'detail') {
                 var index = layer.open({
                     type: 2,
-                    title: "查看订单",
-                    content: 'sample-detail.html?sampleId=' + data.id,
+                    title: "查看生产计划",
+                    content: 'plan-add.html',
                     area: ['300px', '300px'],
                     maxmin: true,
                     success: function (layero, index) {
                         var body = layer.getChildFrame('body', index);
-                        var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
-                        //body.find('input[name="productName"]').val(data.productName);
-                        body.find('input[name="orderNum"]').val(data.order_num);
-                        body.find('input[name="productUnit"]').val(data.product_unit);
-                        /*body.find('input[name="unitPrice"]').val(data.unitPrice);
-                        body.find('input[name="totalPrice"]').val(data.totalPrice);
-                        body.find('input[name="deliverDate"]').val(data.deliverDate);
-                        body.find('input[name="cooperationCompany"]').val(data.cooperationCompany);
-                        body.find('input[name="contactName"]').val(data.contactName);
-                        body.find('input[name="contactPhone"]').val(data.contactPhone);
+                        body.find('input[name="productName"]').val(data.productName);
+                        body.find('input[name="num"]').val(data.num);
+                        body.find('input[name="planName"]').val(data.planName);
+                        body.find('input[name="deptName"]').val(data.deptName);
+                        body.find('input[name="batchNo"]').val(data.batchNo);
+                        body.find('input[name="beginDate"]').val(data.beginDate);
+                        body.find('input[name="endDate"]').val(data.endDate);
                         if (data.remarks){
                             body.find('textarea[name="remarks"]').text(data.remarks);
-                        }*/
+                        }
+
+                        body.find('input[name="productName"]').attr("disabled", "disabled");
+                        body.find('input[name="num"]').attr("disabled", "disabled");
+                        body.find('input[name="planName"]').attr("disabled", "disabled");
+                        body.find('input[name="deptName"]').attr("disabled", "disabled");
+                        body.find('input[name="batchNo"]').attr("disabled", "disabled");
+                        body.find('input[name="beginDate"]').attr("disabled", "disabled");
+                        body.find('input[name="endDate"]').attr("disabled", "disabled");
+                        body.find('textarea[name="remarks"]').attr("disabled", "disabled");
+                        body.find(".layui-layout-admin").remove();
+                    }
+                });
+                layer.full(index);
+            } else if (obj.event === 'edit') {
+                var index = layer.open({
+                    type: 2,
+                    title: "编辑生产计划",
+                    content: 'plan-edit.html?id=' + data.id,
+                    area: ['300px', '300px'],
+                    maxmin: true,
+                    success: function (layero, index) {
+                        var body = layer.getChildFrame('body', index);
+                        body.find('input[name="id"]').val(data.id);
+                        body.find('input[name="productName"]').val(data.productName);
+                        body.find('input[name="num"]').val(data.num);
+                        body.find('input[name="planName"]').val(data.planName);
+                        body.find('input[name="deptName"]').val(data.deptName);
+                        body.find('input[name="batchNo"]').val(data.batchNo);
+                        body.find('input[name="beginDate"]').val(data.beginDate);
+                        body.find('input[name="endDate"]').val(data.endDate);
+                        if (data.remarks){
+                            body.find('textarea[name="remarks"]').text(data.remarks);
+                        }
 
                     }
                 });
                 layer.full(index);
-            } else if (obj.event === 'plan') {
-                var index = layer.open({
-                    type: 2,
-                    title: "创建生产计划",
-                    content: 'plan-add.html?orderId=' + data.order_id,
-                    area: ['300px', '300px'],
-                    maxmin: true,
-                    success: function (layero, index) {
-                        var body = layer.getChildFrame('body', index);
-                        body.find('input[name="orderId"]').val(data.order_id);
-                    }
-                });
-                layer.full(index);
-            } else if (obj.event === 'plan_detail') {
-                var index = layer.open({
-                    type: 2,
-                    title: "查看生产计划",
-                    content: 'plan-list2.html?orderId=' + data.order_id,
-                    area: ['300px', '300px'],
-                    maxmin: true,
-                    success: function (layero, index) {
-                    }
-                });
-                layer.full(index);
-            } else if (obj.event === 'go_produce') {
-                layer.confirm('确定此操作吗？', function (index) {
+            } else if (obj.event === 'del') {
+                layer.confirm('确定需要删除该生产计划？', function (index) {
                     $.ajax({
-                        type: 'PUT',
+                        type: 'DELETE',
                         contentType: "application/json;",
-                        url: domain + "api/plan/updateToProduce/"+ data.order_id,
+                        url: domain + "api/plan/deletePlan/" + data.id,
                         success: function (result) {
                             if (result.code == 0) {
                                 layer.msg(result.msg);
@@ -162,6 +187,16 @@
 
         /* 触发弹层 */
         var active = {
+            add: function () {
+                var index = layer.open({
+                    type: 2,
+                    title: "新建生产计划",
+                    content: 'plan-add.html',
+                    area: ['300px', '300px'],
+                    maxmin: true
+                });
+                layer.full(index);
+            },
             reload: function () {
                 //执行重载
                 table.reload('orderTable', {
@@ -169,10 +204,9 @@
                         curr: 1 //重新从第 1 页开始
                     }
                     , where: {
-                        status: 3,
-                        sampleName: $('#sampleName').val(),
-                        sampleCode: $('#sampleCode').val(),
-                        company: $('#company').val()
+                        productName: $('#productName').val(),
+                        batchNo: $('#batchNo').val(),
+                        status: $('#status').val()
                     }
                 });
             }
