--- a/views/business/sample-list.html
+++ b/views/business/sample-list.html
@@ -18,6 +18,9 @@
             <div class="layui-card">
                 <div class="layui-card-header">样品列表</div>
                 <div class="layui-card-body">
+                    <div class="layui-btn-group" style="margin-bottom: 10px;">
+                        <button class="layui-btn" data-type="add">新增</button>
+                    </div>
                     <div class="demoTable" style="margin-bottom: 10px;">
                         样品名称：
                         <div class="layui-inline">
@@ -27,20 +30,21 @@
                         <div class="layui-inline">
                             <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
                         </div>
-                        合作公司：
-                        <div class="layui-inline">
-                            <input class="layui-input" name="company" id="company" autocomplete="off">
-                        </div>
                         <button class="layui-btn" data-type="reload">搜索</button>
                     </div>
 
                     <table class="layui-hide" id="order-table" lay-filter="order-table"></table>
 
+                    <script type="text/html" id="imagesTpl">
+                        {{#  if(d.photoUrl){ }}
+                            <button class="layui-btn layui-btn-primary images" lay-event="sampleImages">样品</button>
+                        {{#  } }}
+                    </script>
 
                     <script type="text/html" id="user-table-barDemo">
                         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="go_plan">采购完成</a>
-                        <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
+                        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
                     </script>
 
                 </div>
@@ -56,24 +60,24 @@
         base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index', 'table'], function () {
+    }).use(['index', 'table', 'carousel'], function () {
         var $ = layui.$
             , element = layui.element
             , layer = layui.layer
+            ,carousel = layui.carousel
             , table = layui.table;
 
 
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/sample/findSamplePage?status=2'
+            , url: domain + 'api/sample/findSamplePage'
             , cols: [[
-                {field: 'sample_name', title: '样品名称', width: 180, sort: true}
-                , {field: 'sample_code', title: '样品型号', width: 100}
-                , {field: 'order_num', title: '订单数量', width: 100}
-                , {field: 'product_unit', title: '单位', width: 100}
-                , {field: 'cooperation_company', title: '合作公司', width: 150, sort: true}
-                , {field: 'deliver_date', title: '交付时间', width: 120}
+                {field: 'sampleName', title: '样品名称', width: 180, sort: true}
+                , {field: 'sampleName', title: '样品型号', width: 100}
+                , {field: 'photoUrl', title: '样品', width: 200, templet: '#imagesTpl', unresize: true}
+                , {field: 'status', title: '状态', width: 80}
+                , {field: 'createTime', title: '创建时间', width: 180}
                 , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo'}
             ]]
             , id: 'orderTable'
@@ -90,34 +94,36 @@
                 var index = layer.open({
                     type: 2,
                     title: "查看订单",
-                    content: 'sample-detail.html?sampleId=' + data.id,
+                    content: 'sample-detail.html?id=' + data.id,
                     area: ['300px', '300px'],
                     maxmin: true,
                     success: function (layero, index) {
-                        var body = layer.getChildFrame('body', index);
-                        var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
-                        //body.find('input[name="productName"]').val(data.productName);
-                        body.find('input[name="orderNum"]').val(data.order_num);
-                        body.find('input[name="productUnit"]').val(data.product_unit);
-                        /*body.find('input[name="unitPrice"]').val(data.unitPrice);
-                        body.find('input[name="totalPrice"]').val(data.totalPrice);
-                        body.find('input[name="deliverDate"]').val(data.deliverDate);
-                        body.find('input[name="cooperationCompany"]').val(data.cooperationCompany);
-                        body.find('input[name="contactName"]').val(data.contactName);
-                        body.find('input[name="contactPhone"]').val(data.contactPhone);
-                        if (data.remarks){
-                            body.find('textarea[name="remarks"]').text(data.remarks);
-                        }*/
-
                     }
                 });
                 layer.full(index);
-            } else if (obj.event === 'go_plan') {
-                layer.confirm('原材料都准备齐全了吗？', function (index) {
+            } else if (obj.event === 'edit') {
+                var index = layer.open({
+                    type: 2,
+                    title: "查看订单",
+                    content: 'sample-edit.html?id=' + data.id,
+                    area: ['300px', '300px'],
+                    maxmin: true,
+                    success: function (layero, index) {
+                        if (data.status === 1) {
+                            var body = layer.getChildFrame('body', index);
+                            body.find('#upload-more').remove();
+                            body.find('#material-more').remove();
+                            body.find('.layui-footer').remove();
+                        }
+                    }
+                });
+                layer.full(index);
+            } else if (obj.event === 'del') {
+                layer.confirm('确定删除该样品吗？', function (index) {
                     $.ajax({
-                        type: 'POST',
+                        type: 'DELETE',
                         contentType: "application/json;",
-                        url: domain + "api/sample/updateToPlan/"+ data.id,
+                        url: domain + "api/sample/delete/"+ data.id,
                         success: function (result) {
                             if (result.code == 0) {
                                 layer.msg(result.msg);
@@ -131,11 +137,39 @@
                         }
                     });
                 });
+            } else if (obj.event === 'sampleImages') {
+                var json = {
+                    "code": 0,
+                    "msg": "",
+                    "start": 0
+                }
+                var images_data = [];
+                var images = data.photoUrl.split(",");
+                $.each(images, function (index, image) {
+                    $("#carousel-img").append("<div><img src=\"" + image + "\"></div>");
+                    var image_data = {};
+                    image_data.src = image;
+                    images_data.push(image_data);
+                    json.data = images_data;
+                });
+                layer.photos({
+                 photos: json //格式见API文档手册页
+                 });
             }
         });
 
         /* 触发弹层 */
         var active = {
+            add: function () {
+                var index = layer.open({
+                    type: 2,
+                    title: "新增样品",
+                    content: 'sample-add.html',
+                    area: ['300px', '300px'],
+                    maxmin: true
+                });
+                layer.full(index);
+            },
             reload: function () {
                 //执行重载
                 table.reload('orderTable', {
@@ -143,10 +177,8 @@
                         curr: 1 //重新从第 1 页开始
                     }
                     , where: {
-                        status: 2,
                         sampleName: $('#sampleName').val(),
-                        sampleCode: $('#sampleCode').val(),
-                        company: $('#company').val()
+                        sampleCode: $('#sampleCode').val()
                     }
                 });
             }
